@@ -122,3 +122,6 @@ Changes
 Fixes
 =====
 
+- Fixed an issue that would cause a ClassCastException to be thrown instead of
+  BatchUpdateException with a descriptive message, when using batched prepared
+  statements with ``SELECT`` queries.
